# DatabaseKnowledgeGraph

./: .gitignore  CMakeLists.txt
database/: init.sql  test.sql
src/: CMakeLists.txt  main.cpp
src/business/: EditorCommand.h  ForceDirectedLayout.cpp  ForceDirectedLayout.h  GraphEditor.cpp  GraphEditor.h  QueryEngine.cpp  QueryEngine.h
src/database/: AttributeRepository.cpp  AttributeRepository.h  DatabaseConnection.cpp  DatabaseConnection.h  NodeRepository.cpp  NodeRepository.h  OntologyRepository.cpp  OntologyRepository.h  RelationshipRepository.cpp  RelationshipRepository.h  UserRepository.cpp  UserRepository.h
src/model/: Attribute.h  GraphEdge.h  GraphNode.h  Ontology.h  User.h
src/ui/: DashboardDialog.cpp  DashboardDialog.h  ProjectSelectionDialog.cpp  ProjectSelectionDialog.h  QueryDialog.h  VisualEdge.cpp  VisualEdge.h  VisualNode.cpp  VisualNode.h  addedgedialog.cpp  addedgedialog.h  addedgedialog.ui  addnodedialog.cpp  addnodedialog.h  addnodedialog.ui  aitextimportdialog.cpp  aitextimportdialog.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss  usermanagementdialog.cpp  usermanagementdialog.h
test/: CMakeLists.txt  tst_main.cpp
